# TestTaskIniti

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RunAndBuildTests.sh  run_tests.sh
Scripts/: BuildProject.sh
src/: TestTaskInitiCoreDefinitions.h  TestTaskInitiCoreSerializator.cpp  TestTaskInitiCoreSerializator.h  TestTaskInitiCoreValueWrapper.cpp  TestTaskInitiCoreValueWrapper.h  main.cpp
tests/: CMakeLists.txt  TestTaskInitiTestsInitialization.cpp  TestTaskInitiTestsSerialization.cpp
tools/cmake-4.0.1-windows-x86_64/share/cmake-4.0/Help/release/: 4.0.rst
tools/cmake-4.0.1-windows-x86_64/share/cmake-4.0/Help/variable/: CMAKE_OSX_SYSROOT.rst
tools/cmake-4.0.1-windows-x86_64/share/cmake-4.0/Modules/FindPython/: Support.cmake
